[project]
name = "regulatory-compliance-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
    "streamlit>=1.59.2",
]
